Small change 'follow' to 'Follow'

--- a/app/design/frontend/ultimo/default/template/checkout/onepage/shipping_method/available.phtml
+++ b/app/design/frontend/ultimo/default/template/checkout/onepage/shipping_method/available.phtml
@@ -27,7 +27,7 @@
 <?php /** @var $this Mage_Checkout_Block_Onepage_Shipping_Method_Available */ ?>
 <?php $_shippingRateGroups = $this->getShippingRates(); ?>
 <?php if (!$_shippingRateGroups): ?>
-    <p><?php echo $this->__('Sorry we can’t ship to your location at this time. Please visit our <a href="/default/dealers/">DEALERS PAGE</a> to find your nearest follow dealer.') ?></p>
+    <p><?php echo $this->__('Sorry we can’t ship to your location at this time. Please visit our <a href="/default/dealers/">DEALERS PAGE</a> to find your nearest Follow dealer.') ?></p>
 <?php else: ?>
     <dl class="sp-methods ddddd">
     <?php $haveFreeMethod = false; $shippingCodePrice = array(); ?>
